--- a/minimal_hover/index.html
+++ b/minimal_hover/index.html
@@ -14,6 +14,14 @@
   fill: orange;
 }
 
+.hit_bar {
+  fill: transparent;
+  stroke: transparent;
+}
+
+
+
+
 </style>
 </head>
 <body>
@@ -27,12 +35,41 @@ var svg = d3.select("body")
             .attr("width", 300)
             .attr("height", 200);
  
+// bind the group element with data
+var gg_mark = svg.selectAll()
+    .data(data)
+    .enter()
+    .append("g")
+    .on('mouseover', function(d) {  
+        d3.select(this)
+        .selectAll('.mark_bar')
+        .style("fill", "red");
+    })
 
-svg.selectAll()
-  .data(data)
-  // creates dummy elements for number of data items
-  .enter()
-  .append("rect")
+// setting to null will return the fill to being set by css.    
+    .on('mouseout', function(d) {  
+        d3.select(this)
+        .selectAll('.mark_bar')
+        .style("fill", null);
+    })
+
+
+
+
+
+// put the larger bars (ie hit shaoe) first
+
+gg_mark.append("rect")
+   .attr({
+    class : "hit_bar",
+    width : function(d) {return 300;},
+    height: "40",
+    // returns 10, 60, 110, 160
+    y : function(d, i) {return i*50 + 10;},
+    x : "30"
+   });
+
+gg_mark.append("rect")
   .attr({
     class : "mark_bar",
     width : function(d) {return d;},
@@ -41,7 +78,7 @@ svg.selectAll()
     y : function(d, i) {return i*50 + 10;},
     x : "30"
    });
-   
+
 </script>	
 </body>
 </html>
