--- a/horizontal_stack/index.html
+++ b/horizontal_stack/index.html
@@ -141,6 +141,52 @@ var arr_data_large =
 ];
 
 
+var arr_data_large = 
+[
+	{
+		"group": "<20",
+		"Women": 62,
+		"Men": 91
+	},
+	{
+		"group": "20 - 29",
+		"Women": 1514,
+		"Men": 1857
+	},
+	{
+		"group": "30 - 39",
+		"Women": 1301,
+		"Men": 2040
+	},
+	{
+		"group": "40 - 49",
+		"Women": 1405,
+		"Men": 700
+  },
+  {
+		"group": "50 - 60",
+		"Women": 568,
+		"Men": 933
+  },
+  {
+		"group": "> 60",
+		"Women": 158,
+		"Men": 381
+	}
+];
+
+
+
+
+
+
+
+
+
+
+
+
+
 // ==========================================================================  
 // THINGS THAT HAPPEN ONCE
 // ==========================================================================  
@@ -175,28 +221,28 @@ var arr_data_large =
   var color = d3.scaleOrdinal()
       .domain(arr_gender)
       .range(['#e41a1c','#377eb8'])
-
   // y scale
   var y = d3.scaleBand()
         .domain(["<20", "20 - 29", "30 - 39", "40 - 49", "50 - 60", "> 60"])
         .range([0, int_height])
         .paddingInner([0.2])
         .paddingOuter([0]);
-
   // y axis 
   var sg_y_axis = svg.append("g")
       .attr("transform", "translate(0," + "0" + ")")
       .call(d3.axisLeft(y));
       sg_y_axis.select(".domain").remove();
-
- 
-  
 // ==========================================================================  
 
 var arr_initial = [10, 20, 30, 40, 50, 60]
-var totalLabels = svg.append('g').attr('class', 'totals');
 
-totalLabels.selectAll('.total')
+// totalLabels is a "g" element
+var totalLabels = svg.append('g').attr('class', 'totals').attr('id', "totalLabels");
+
+
+// each one of these is a text element
+
+var text_elements = totalLabels.selectAll()
     .data(arr_initial)
     .enter()
     .append('text')
@@ -237,14 +283,15 @@ function fn_sub_g_draw(lcl_data) {
     .key(function(d) {return d.group;})
     .rollup(function(d) {return d3.sum(d, function(g) {return g.Women + g.Men;});})
     .entries(lcl_data);
-   
-  group_totals.forEach(function(item, item_index) {
-    var text_item =  d3.select('#' + 'text-total-' + item_index)
-    text_item.text(item.value);
-    text_item.attr("y", y(item.key) + (y.bandwidth() / 2));
-    text_item.attr("x", x(item.value) +  int_label_offset);
-  }) // group_totals.forEach
-  
+
+	text_elements
+		.each(function(d, i){
+			d3.select(this)
+				.text(group_totals[i].value)
+				.attr("y", y(group_totals[i].key) + (y.bandwidth() / 2))
+				.attr("x", x(group_totals[i].value) +  int_label_offset);
+			}); // each
+
 } // fn_sub_g_draw
 
 
